# Goblin

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  GOBLIN.md  README.md  SECURITY.md  codex.md  pyproject.toml
.agents/: registry.json
.claude/: settings.local.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
Goblin/: EVOLUTION.md  IMPLEMENTATION_TRACKER.md  MATURITY.md  ML_EVOLUTION_PLAN.md  PHASE_BRIEF.md  PROGRAM.md  ROADMAP.md  S1_PLUS_PLAN.md  STATUS.md  TAKEOVER_PLAN.md
config/: autonomy_policy.toml  codex_capabilities.toml  codex_operator_policy.toml  data_contract.toml  default.toml  eval_gates.toml  local.toml.example  mt5_env.toml  openai-live.toml  portfolio_policy.toml  program_policy.toml  risk_policy.toml
docs/: GLOSSARY.md
experiments/: af-cand-0002_iteration_20260321T003243Z.json  af-cand-0007_iteration_20260321T004627Z.json  af-cand-0007_iteration_20260321T005538Z.json  af-cand-0278_day_trading_refinement_20260329T200204Z.json  af-cand-0279_day_trading_refinement_20260329T201119Z.json  af-cand-0290_day_trading_refinement_20260329T201839Z.json  af-cand-0296_day_trading_refinement_20260329T210851Z.json  af-cand-0300_day_trading_refinement_20260329T211406Z.json  af-cand-0311_day_trading_refinement_20260329T214042Z.json  af-cand-0320_day_trading_refinement_20260329T215532Z.json  af-cand-0324_day_trading_refinement_20260329T220810Z.json  af-cand-0329_day_trading_refinement_20260329T224819Z.json  af-cand-0334_day_trading_refinement_20260329T232836Z.json  af-cand-0340_day_trading_refinement_20260329T234638Z.json  af-cand-0342_day_trading_refinement_20260329T235949Z.json  af-cand-0369_day_trading_refinement_20260330T204953Z.json  af-cand-0370_day_trading_refinement_20260330T204404Z.json  af-cand-0371_day_trading_refinement_20260330T203859Z.json  af-cand-0376_day_trading_refinement_20260330T213434Z.json  af-cand-0377_day_trading_refinement_20260330T210909Z.json  af-cand-0386_day_trading_refinement_20260330T210353Z.json  af-cand-0399_day_trading_refinement_20260330T212917Z.json  af-cand-0404_day_trading_refinement_20260330T214852Z.json  af-cand-0427_day_trading_refinement_20260331T001504Z.json  af-cand-0434_day_trading_refinement_20260331T002126Z.json  af-cand-0446_day_trading_refinement_20260331T010555Z.json  af-cand-0573_day_trading_refinement_20260401T131955Z.json  af-cand-0578_day_trading_refinement_20260401T133245Z.json  af-cand-0578_day_trading_refinement_20260401T134951Z.json  af-cand-0578_day_trading_refinement_20260401T190136Z.json  af-cand-0594_day_trading_refinement_20260401T190958Z.json  af-cand-0600_day_trading_refinement_20260401T191925Z.json  comparison_20260321T001352Z.json  comparison_20260321T002239Z.json  comparison_20260321T002306Z.json  comparison_20260321T003243Z.json  comparison_20260321T004627Z.json  comparison_20260321T005538Z.json  comparison_20260321T005622Z.json  comparison_20260321T005645Z.json  (+124 more)
knowledge/: codex_capability_catalog.json  codex_capability_index.md  overlap-contract-alignment-audit.md  overlap-mean-reversion-gap-audit.md  parity-lineage-audit.md  parity-operator-matrix.md  pdf-alignment-roadmap.md  portfolio-expansion-plan.md  recovery-implementation-plan.md  runtime-provider-decision.md  single-step-autonomy-prompt.md  source-of-truth.md
prompts/: critic_system.txt  critic_user.txt  day_trading_system.txt  day_trading_user.txt  reframe_system.txt  reframe_user.txt  (+4 more)
(+8213 files in other folders)
