[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goblin"
version = "0.1.0"
description = "Goblin-first forex research and validation platform with governed compatibility bridges."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
  "cma>=4.0,<5",
  "deap>=1.4,<2",
  "duckdb>=1.2,<2",
  "ebooklib>=0.18,<1",
  "numpy>=2.4.4,<3",
  "openai>=1.60,<2",
  "pandas>=2.2,<3",
  "pydantic>=2.13.2,<3",
  "pypdf>=5,<6",
  "pyarrow>=18,<20",
  "requests>=2.33.1,<3",
  "scikit-learn>=1.8.0,<2",
  "shap>=0.46,<1",
  "xgboost>=2.1,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "ruff>=0.4,<1",
  "pre-commit>=3.7,<4",
]
# ML Phase 2 optional: torch + cryptography for the sealed-holdout ceremony
# and the deterministic 1D-CNN baseline. Pinned to CPU-only torch wheel.
# CI installs this as: pip install -e ".[ml-p2]" --extra-index-url https://download.pytorch.org/whl/cpu
ml-p2 = [
  "cryptography>=43,<44",
  "torch==2.5.1",
]

[project.scripts]
goblin = "goblin.cli.app:main"
agentic-forex = "goblin.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "E402", "UP042"]

[tool.ruff.format]
quote-style = "double"
